# web-loader-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  error.rs  main.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs  request.rs  response.rs  snapshot.rs
src/routes/: health.rs  loader.rs  mod.rs
src/services/: browser.rs  cache.rs  converter.rs  markdown.rs  mod.rs  readability.rs  scraper.rs  screenshot.rs  security.rs  user_agent.rs
